# bsp_exorcist

./: .gitignore  CMakeLists.txt  README.md
blam/: CMakeLists.txt
blam/include/blam/: base.h  collision.h  collision_bsp_ext.h  math.h  platform.h  tag.h
blam/src/: base.c  collision.c  collision_bsp.c  collision_bsp_ext.c  math.c
hlef/: CMakeLists.txt  hlef.lua
hlef/include/: hlef.h  hlef_base.h
hlef/src/: hlef.c  hlef_context.c  hlef_hooks.c  hlef_interfaces.c  hlef_patch.c  hlef_scan.c  hlef_vector.c  main.c
hlef/src/include/: hlef_context.h  hlef_hooks.h  hlef_interfaces.h  hlef_patch.h  hlef_scan.h  hlef_vector.h
sapp/: bsp_exorcist.lua
